--- a/src/scss/Categories.module.scss
+++ b/src/scss/Categories.module.scss
@@ -17,3 +17,13 @@
     }
     
 }
+/*576-767*/
+@media screen and (max-width:767px){
+	.menu{
+       flex-wrap: wrap;
+       
+        
+        
+    }
+	
+}
