--- a/src/scss/Header.module.scss
+++ b/src/scss/Header.module.scss
@@ -37,3 +37,11 @@
     }
 }
 
+/*375-457*/
+@media screen and (max-width:457px){
+	
+    .header__set{
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+}
